# persona-debate

./: .gitignore  README.md  pyproject.toml  requirements.txt
manifests/: manifest_schema.yaml
persona_artifacts/judge_banks/: gpqa_family_cache.json
scripts/: analyze-results  debate-v-majority  token-ledger-cost  trace2txt
src/debate_v_majority/: __init__.py  __main__.py  accounting.py
src/debate_v_majority/cli/: __init__.py  args.py  config.py  dataset_eval.py  debate_runner.py  engine_runtime.py  hle_experiment.py  judge.py  judge_common.py  main_impl.py  output.py  persona_runtime.py  response_parsing.py  result_rows.py  sample_runner.py  stage_state.py  subset.py
src/debate_v_majority/datasets/: __init__.py  aime25.py  base.py  gpqa.py  hle.py  registry.py  registry.yaml
src/debate_v_majority/engines/: __init__.py  base.py  engine_impl.py  gemini_api.py  providers.py  sampling.py
src/debate_v_majority/personas/: __init__.py  artifacts.py  axes.py  generator.py  judge_bank.py  judge_generator.py  prompt_templates.py  sampling.py  (+2 more)
tests/: test_accounting.py  test_analyze_results_outputs.py  test_cli_subset.py  test_dataset_parsers.py  test_dataset_registry.py  test_engine_helpers.py  test_hle_experiment.py  test_judge_bank_defaults.py  test_persona_parallel_runtime.py  test_personas_phase0.py  test_phase1_debate.py  test_phase2_majority.py  test_phase4_hle.py  test_phase6_engine_provider.py  test_phase6_engines.py  test_scripts_help.py  test_shared_utils.py  test_smoke_api.py  test_staged_execution.py  test_token_ledger_cost.py  test_trace2txt.py
(+14 files in other folders)
